<resources>
    <string name="app_name" translatable="false">FuelDiet</string>
    <string name="action_settings">Settings</string>
    <string name="add_vehicle_make">Make</string>
    <string name="add_vehicle_model">Model</string>
    <string name="add_vehicle_fuel">Fuel Type</string>
    <string name="add_vehicle_hybrid">Hybrid</string>
    <string name="add_vehicle_model_year">Model year</string>
    <string name="add_vehicle_engine">Engine Size (l)</string>
    <string name="add_vehicle_transmission">Transmission</string>
    <string name="add_vehicle_horse_power">Power (hp)</string>
    <string name="add_vehicle_start_km">Init km</string>
    <string name="add_vehicle_torque">Torque (Nm)</string>
    <string name="create_new_vehicle_title">Add new vehicle</string>
    <string name="edit_vehicle_title">Edit vehicle</string>
    <string name="title_activity_settings">Settings</string>
    <string name="create_new_drive_title">Add new fueling</string>
    <string name="create_new_reminder_title">Add a new reminder</string>
    <string name="title_activity_vehicle_details">Vehicle details</string>
    <string name="tab_text_1">Consumption</string>
    <string name="tab_text_2">Other costs</string>
    <string name="tab_text_3">Reminders</string>
    <string name="l_per_100_km_unit" translatable="false">l/100km</string>
    <string name="km_per_l_unit" translatable="false">km/l</string>
    <string name="total_km_icon">Total km icon</string>
    <string name="consumption_icon">Consumption icon</string>
    <string name="consumption_fuel_trend">Fuel cost price trend</string>
    <string name="litre_price_per_l">Price/L</string>
    <string name="litre_fuel">Fuel (l)</string>
    <string name="total_price">Total cost</string>
    <string name="total_km">Total kilometres</string>
    <string name="category">Category</string>
    <string name="add_cots_title">Cost information</string>
    <string name="car_logo">Car logo</string>
    <string name="vehicle_reminder_active">Active reminders</string>
    <string name="vehicle_reminder_active_repeat">Active repeat reminders</string>
    <string name="vehicle_reminder_prev">Previous reminders</string>
    <string name="choose_category">Choose reminder type</string>
    <string name="add_reminder_title">Data</string>
    <string name="add_reminder_when">When to remind</string>
    <string name="add_reminder_desc">Details description</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="optional">Optional</string>
    <string name="price">Price</string>
    <string name="desc">Description</string>
    <string name="euro_icon">Euro icon</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="clock_icon">Time icon</string>
    <string name="km_icon">Kilometres icon</string>
    <string name="title_icon">Title icon</string>
    <string name="category_icon">Category icon</string>
    <string name="fuel_icon">Fuel icon</string>
    <string name="chart_icon">Chart icon</string>
    <string name="desc_img">Description icon</string>
    <string name="engine_icon">Engine icon</string>
    <string name="model_icon">Model icon</string>
    <string name="transmission_icon">Transmission icon</string>
    <string name="language">Language</string>
    <string name="override_lang">Override system language</string>
    <string name="select_lang">Select language</string>
    <string name="units">Units</string>
    <string name="select_cons_unit">Consumption unit</string>
    <string name="about">About</string>
    <string name="build_version">Build version</string>
    <string name="select_expense">Select expense type</string>
    <string name="registration">Registration</string>
    <string name="tolls">Tolls</string>
    <string name="service">Service</string>
    <string name="modification">Modification</string>
    <string name="maintenance">Maintenance</string>
    <string name="other">Other</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="electric">Electric</string>
    <string name="gas_and_petrol">Petrol + CNG</string>
    <string name="gas_and_diesel">Diesel + CNG</string>
    <string name="hydrogen">Hydrogen</string>
    <string name="manual_t">Manual (MT)</string>
    <string name="automatic_t">Automatic (AT)</string>
    <string name="automated_manual_t">Automated Manual (AMT)</string>
    <string name="dct">Dual-clutch (DCT)</string>
    <string name="cvt">CVT</string>
    <string name="sequential_t">Sequential</string>
    <string name="ivt">IVT</string>
    <string name="total_meter" translatable="false">ODO</string>
    <string name="trip_meter" translatable="false">TRIP</string>
    <string name="km_mode">Kilometre mode</string>
    <string name="time_mode">Date mode</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="types">Types</string>
    <string name="pie">Pie</string>
    <string name="line">Line</string>
    <string name="bar">Bar</string>
    <string name="chart_for">Charts for</string>
    <string name="fuel">Fuel</string>
    <string name="fuel_consumption">Fuel consumption</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="vehicle_deleted">Vehicle deleted!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="insert_km">Please insert kilometres</string>
    <string name="insert_cost">Please insert cost</string>
    <string name="insert_title">Please insert title</string>
    <string name="select_cost">Please select type of cost!</string>
    <string name="smaller_km_bigger_time">Entry with lesser km has later date</string>
    <string name="bigger_km_smaller_time">Entry with greater km has earlier date</string>
    <string name="km_is_smaller_than_prev">Total kilometers value is smaller than previous</string>
    <string name="km_ok_time_not">Total kilometers are bigger than prev, yet time is before prev</string>
    <string name="fill_text_edits">Please insert text in all required fields</string>
    <string name="fill_text_cost">Please insert text in all of the fields</string>
    <string name="object_deleted">Successfully deleted!</string>
    <string name="create_new_cost_title">Add a new cost</string>
    <string name="edit_cost_title">Edit cost</string>
    <string name="restart_required">Restart required!</string>
    <string name="reload_details_message">Reload to first page is required after language change.</string>
    <string name="edit_drive_title">Edit fueling data</string>
    <string name="undo_pressed">Undo pressed!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="version" translatable="false">v3.4.4</string>
    <string name="confirm_reminder_done">Confirm reminder done</string>
    <string name="double_tap_to_exit">Press back again to exit</string>
    <string name="add_vehicle_make_logo_text">Vehicle logo</string>
    <string name="tap_image_to_change_it">Tap image to change it</string>
    <string name="old_km">old</string>
    <string name="new_km">new</string>
    <string name="tutorial_reset">Tutorial is reset.</string>
    <string name="snooze">SNOOZE</string>
    <string name="done">DONE</string>
    <string name="home">Home</string>
    <string name="calculator">Calculator</string>
    <string name="price_calc">Converter</string>
    <string name="tickets">Tickets/Fines</string>
    <string name="cost">Cost</string>
    <string name="last_entries">Last Entries</string>
    <string name="average_fuel_consumption">Average fuel consumption</string>
    <string name="recent_fuel_consumption">Recent fuel consumption</string>
    <string name="fuel_cost">Fuel cost</string>
    <string name="other_cost">Other cost</string>
    <string name="this_month">This month:</string>
    <string name="previous_month">Previous month:</string>
    <string name="show_note">Show note</string>
    <string name="set_as_done">Set as done</string>
    <string name="petrol_station">Petrol station</string>
    <string name="odo_km_no_km_yet">ODO: no km yet</string>
    <string name="insert_distance">Distance</string>
    <string name="not_full">Not full tank</string>
    <string name="first_fueling">First fueling</string>
    <string name="note">Note</string>
    <string name="close">CLOSE</string>
    <string name="no_note">No note</string>
    <string name="action_not_possible">Action not possible</string>
    <string name="no_vehicle">No vehicle</string>
    <string name="change_km">Change total kilometres counter?</string>
    <string name="added">added!</string>
    <string name="not_possible_no_vehicle">Option not possible with current vehicle.</string>
    <string name="export_done">Export is done</string>
    <string name="true_kilometres">True kilometres:</string>
    <string name="refueling">Refueling</string>
    <string name="no_data_yet">No data yet</string>
    <string name="log_fuel">Log fuel</string>
    <string name="log_cost">Log cost</string>
    <string name="add_rem">Add reminder</string>
    <string name="default_parameters">Default parameters</string>
    <string name="backup_folder">Backup folder</string>
    <string name="backup_recent">Recent backups</string>
    <string name="backup_desc">Backing up you data allows you to restore all your data in case you loose or change devices.</string>
    <string name="backup_dialog_restore_title">Revert to previous version</string>
    <string name="backup_dialog_restore_desc">Restoring the backup will OVERWRITE  all the existing data with the backup.</string>
    <string name="backup_dialog_restore_button_restore">Restore from backup</string>
    <string name="backup_dialog_restore_details">Backup details</string>
    <string name="backup_and_restore">Backup and restore</string>
    <string name="export_csv">Export to CSV</string>
    <string name="import_csv">Import CSV</string>
    <string name="export_issue_permissions">FuelDiet needs storage permissions to save exported data.</string>
    <string name="country">Country</string>
    <string name="set_as_default">Set as default for shortcuts</string>
    <string name="automatic_backup">Automatic backup</string>
    <string name="import_done">Restore from backup successfully completed!</string>
    <string name="backup_created">Backup successfully created!</string>
    <string name="backup_error">An error occurred when creating backup!</string>
    <string name="backup_button_restore">Restore</string>
    <string name="enter_backup_file_name">Enter backup file name</string>
    <string name="add_note">Add note</string>
    <string name="save">Save</string>
    <string name="note_for_next_fuel">Add a note for next fuel log</string>
    <string name="repeat_every_x">Repeat every</string>
    <string name="last_km">Last km</string>
    <string name="at">Started at</string>
    <string name="days">days</string>
    <string name="set_as_finish">Set as finish</string>
    <string name="disabled_gps">Location is disabled</string>
    <string name="gps_location">Current location</string>
    <string name="modify_petrol_stations">Modify petrol stations</string>
    <string name="options">Options</string>
    <string name="stations_price">Fuel prices</string>
    <string name="fuel_prices">Fuel prices</string>
    <string name="change_data">Change data</string>
    <string name="modify_vehicles">Modify vehicles</string>
    <string name="vehicle_details">Vehicle details</string>
    <string name="add_item">Add item</string>
    <string name="item_name">Item name</string>
    <string name="item_price">Item price</string>
    <string name="item_desc">Item description</string>
</resources>