<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/add_vehicle"
        android:orderInCategory="100"
        android:title="@string/create_new_vehicle_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit_vehicle"
        android:orderInCategory="100"
        android:title="@string/edit_vehicle_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/backup_and_restore"
        android:orderInCategory="100"
        android:title="@string/backup_and_restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/petrol_stations_edit"
        android:orderInCategory="100"
        android:title="@string/modify_petrol_stations"
        app:showAsAction="never" />
</menu>