<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:background="?attr/colorBg">

        <TextView
            android:id="@+id/costs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/costs_type"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:maxEms="12"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/costs_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/costs_date"
            android:layout_alignStart="@+id/costs_title"
            android:layout_marginTop="5dp"
            android:maxEms="13"
            android:text="@string/desc"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/costs_odo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/costs_title"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:text="@string/total_km"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/costs_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/costs_desc"
            android:layout_alignEnd="@+id/costs_odo"
            android:text="@string/total_price"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/costs_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/costs_title"
            android:layout_alignStart="@+id/costs_title"
            android:layout_marginTop="-5dp"
            android:text="@string/date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/costs_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/category" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>