<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.fueldiet.activity.MainActivity">

    <item
        android:id="@+id/add_vehicle"
        android:orderInCategory="100"
        android:title="@string/create_new_vehicle_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit_vehicle"
        android:orderInCategory="100"
        android:title="@string/edit_vehicle_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_db"
        android:orderInCategory="100"
        android:title="@string/export_db"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/reset_db"
        android:orderInCategory="100"
        android:title="@string/reset_db"
        app:showAsAction="never" />-->
</menu>
