<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    android:elevation="5dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="?attr/colorBg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/costs_km_const"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/cost_calendar_img"
            android:layout_alignEnd="@+id/costs_price"
            android:layout_alignBottom="@id/cost_calendar_img">

            <ImageView
                android:id="@+id/cost_odo_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/total_km_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_timeline_black_24dp"
                app:tint="@color/blu" />

            <TextView
                android:id="@+id/costs_odo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/total_km"
                app:layout_constraintBottom_toBottomOf="@+id/cost_odo_img"
                app:layout_constraintStart_toEndOf="@+id/cost_odo_img"
                app:layout_constraintTop_toTopOf="@+id/cost_odo_img" />

            <TextView
                android:id="@+id/unit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="km"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/costs_odo"
                app:layout_constraintStart_toEndOf="@id/costs_odo"
                app:layout_constraintTop_toTopOf="@+id/costs_odo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/costs_more"
            style="@style/Widget.App.Button.TextButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-5dp"
            android:layout_marginEnd="-15dp"
            android:padding="5dp"
            app:rippleColor="@color/blu"
            app:icon="@drawable/ic_more_vert_black_24dp"
            app:iconTint="@color/blu" />

        <TextView
            android:id="@+id/costs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/costs_type"
            android:layout_alignStart="@+id/costs_category_img"
            android:layout_marginTop="5dp"
            android:capitalize="words"
            android:maxEms="12"
            android:text="@string/title"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/costs_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/costs_title"
            android:layout_alignBottom="@+id/costs_title"
            android:layout_toStartOf="@+id/costs_more"
            android:text="@string/total_price"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/costs_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/cost_calendar_img"
            android:layout_alignBottom="@+id/cost_calendar_img"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/cost_calendar_img"
            android:gravity="center"
            android:text="@string/date" />

        <TextView
            android:id="@+id/costs_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/costs_category_img"
            android:layout_alignBottom="@+id/costs_category_img"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/costs_category_img"
            android:gravity="center"
            android:text="@string/category"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/cost_calendar_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cost_divider"
            android:layout_alignStart="@id/costs_title"
            android:contentDescription="@string/calendar_icon"
            app:srcCompat="@drawable/ic_today_black_24dp"
            app:tint="@color/blu" />

        <ImageView
            android:id="@+id/costs_category_img"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/category_icon"
            app:srcCompat="@drawable/ic_label_black_24dp"
            app:tint="@color/secondaryTextColor" />

        <View
            android:id="@+id/cost_divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@id/costs_title"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>