<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_cost_item_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_cost_item_price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/dialog_cost_item_title"
        app:layout_constraintStart_toStartOf="@+id/dialog_cost_item_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_cost_item_title"
        app:suffixText="€">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_price"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_cost_item_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/dialog_cost_item_price"
        app:layout_constraintStart_toStartOf="@+id/dialog_cost_item_price"
        app:layout_constraintTop_toBottomOf="@+id/dialog_cost_item_price">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_desc" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_prices_search_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_item"
        app:layout_constraintEnd_toEndOf="@+id/dialog_cost_item_desc"
        app:layout_constraintTop_toBottomOf="@+id/dialog_cost_item_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_prices_cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/search_prices_search_button"
        app:layout_constraintEnd_toStartOf="@+id/search_prices_search_button"
        app:layout_constraintTop_toTopOf="@+id/search_prices_search_button" />


</androidx.constraintlayout.widget.ConstraintLayout>